# libvector

./: .gitignore  LICENSE  README.md  meson.build  meson_options.txt
include/: OOP.h  meson.build  vector.h  version.h.in
src/: meson.build  test.c  vector.c
